--- a/princess.html
+++ b/princess.html
@@ -296,7 +296,7 @@
       },
       {
         text: "I love you, today and every day.",
-        img: "GG/10.jpg"
+        img: "GG/10(2).jpg"
       }
     ];
     let page = 0; // Current message index
